--- a/frontend/code/providers/styles.css
+++ b/frontend/code/providers/styles.css
@@ -1,73 +1,54 @@
 body {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  .first {
-
-    font-weight: bold;
-    font-size:x-large;
-    background-color: #d5dfde;
-  
-  
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-    width: 15%;
-    
-  
-  }
-  
-  li a {
-
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 30px 40px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #111;
-  }
-
-  .providers {
-    width: 25%;
-  }
-  
-
-header {
-    margin: 0;
-    padding: 0;
-    background-color: #333
-}
-
-  
-h1 {
-    margin: 0;
-    padding: 0;
-    color: white;
-    text-align: center;
-}
-
-table {
   width: 100%;
-  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
 }
 
-th, td {
-  padding: 8px;
-  width: 12.5%;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  width: 20%;
+  
+
+}
+
+li a {
+
+  display: block;
+  color: white;
   text-align: center;
-  border-bottom: 1px solid #ddd;
+  padding: 30px 40px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #555;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #8f8e8e;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
