--- a/frontend/code/providers/add_provider.css
+++ b/frontend/code/providers/add_provider.css
@@ -5,12 +5,6 @@ body {
     padding: 0;
   }
 
-  header {
-    margin: 0;
-    padding: 30px;
-    background-color: #333
-}
-  
   
   h1 {
     text-align: center;
@@ -18,10 +12,10 @@ body {
   }
   
   form {
-    max-width: 400px;
+    max-width: 100%;
     margin: auto;
     background-color: #fff;
-    padding: 20px;
+    padding: 80px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
