--- a/frontend/code/styles.css
+++ b/frontend/code/styles.css
@@ -2,6 +2,19 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
+
+  }
+
+  .image {
+    text-align: center;
+  }
+
+  .footer {
+    padding: 5px;
+    text-align: center;
+    background-color: #333;
+    color: white;
+
   }
 
   .company-manager {
